fix table sorting issue where sorting image would overlap text on narrow columns
git-svn-id: http://svn.civicrm.org/civicrm/trunk@24369 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -2081,6 +2081,12 @@ div#toolTip {
 
 
 /*  DataTables sorting */
+th.sorting,
+th.sorting_asc,
+th.sorting_desc {
+	padding-right:14px !important;
+	}
+
 
 .sorting_asc { background: url('../i/dataTable/sort_sprites.png') no-repeat right -28px; }
 
